Content style: Fixed z-index.

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -2165,6 +2165,7 @@ div#exit_message {
 	box-sizing: border-box;
 
 	background-color: white;
+	z-index: 10000;
 }
 
 div#exit_message.visible {
